--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@trigger.dev/nextjs": "^2.0.11",
+    "@trigger.dev/sdk": "^2.0.0-next.22",
     "@types/node": "20.5.4",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -21,5 +23,11 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "trigger.dev": {
+    "endpointId": "my-app"
+  },
+  "devDependencies": {
+    "@trigger.dev/eslint-plugin": "^2.0.11"
   }
 }
